modified fso controller

--- a/appsettings.json
+++ b/appsettings.json
@@ -11,7 +11,8 @@
   },
   "AllowedHosts": "*",
   "Jwt": {
-    "key": "!KVm%=TueG3qfBr7p=*#ZS=rv+rmPk^_"
+    "key": "!KVm%=TueG3qfBr7p=*#ZS=rv+rmPk^_",
+    "lifetime": "5"
   },
   "Storage": {
     "url": "C:\\scs-storage",
