--- a/appsettings.json
+++ b/appsettings.json
@@ -12,11 +12,12 @@
   "AllowedHosts": "*",
   "Jwt": {
     "key": "!KVm%=TueG3qfBr7p=*#ZS=rv+rmPk^_",
-    "lifetime": "5"
+    "lifetime": "5",
+    "issuer": "http://scs.sergiug.space"
   },
   "Storage": {
-    "url": "C:\\scs-storage",
-    "size": "5368709120"
+    "Url": "C:\\scs-storage",
+    "Size": "5368709120"
   }
 
 }
